--- a/style.css
+++ b/style.css
@@ -324,22 +324,66 @@ p strong {
   min-height: 120vh;
   box-sizing: border-box;
   width: 100vw;
+  overflow: hidden; /* aby nič nepretŕčalo */
+  position: relative;        /* potrebné pre vrstvy */
 }
 
+/* ===== Sekcia s obrazkom vlavo na pozadi a textom vpravo ===== */
 .interspace {
   background-image: url(img/meziprostor.png);
   background-position: -10% -13px;
   background-size: 50%;
   background-repeat: no-repeat;
+  position: relative;
 }
 
+
+/* 🔄 ale keď sa stránka zúži (napr. tablet, mobil) */
+@media (max-width: 768px) {
+  .container.interspace {
+    background-position: top left;
+    background-size: 80%;
+   /* padding-top: 15em;*/
+    margin-top: 5em;
+   /* width: 100%;*/
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+}
+/* ===== END sekcia s obrazkom vlavo na pozadi a textom vpravo ===== */
+
+
 /* ===== TEXT BLOKY ===== */
+
+/* ===== TEXT BLOK - bude cely odsadeny vlavo  =====  */
 .continue {
   padding-top: 5em;
   max-width: 28rem;
-  width: 120%;
-  transform: translateX(-27%);
+  width: 150%;
+  transform: none;
+  margin: 0 auto; /* vycentruje text, keď je v úzkom stĺpci */
+  position: relative;       /* aby bol nad pozadím */
+  z-index: 2; /* aby bol text vždy nad pozadím - obrazok z interspace*/
+ ;}
+
+/* 🟢 na väčších obrazovkách sa zachova pôvodné zarovnanie: */
+@media (min-width: 992px) {
+  .continue {
+    width: 150%;
+    transform: translateX(-27%) translateY(-5em); /* jemný posun doľava a nahor */
+  }
 }
+
+/* 🔄 ale keď sa stránka zúži (napr. tablet, mobil) *//
+@media (max-width: 768px) {
+  .continue {
+    transform: none;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 0;
+  }
+}
+/* ===== END TEXT BLOK - bude cely odsadeny vlavo  ===== */
 
 .col-8.exhibition_list {
   padding-left: 2em;
@@ -1025,16 +1069,29 @@ figure.drops img {
   margin-bottom: 15em;
 }
 
-.phototeachers {
+
+/* ===== Fotka v beznom okne na stred ===== */
+.photo-centric {
   margin-top: 19em;
-  display: block; /* -aby sa to spravilo pod seba - zabera cely riadok */
-  width: 100vw; /* roztiahne obrázok cez celú šírku okna prehliadača, bez ohľadu na šírku rodičovského kontajnera */
-  max-width: 100vw;
+  display: block;
+  width: 100%;
+  max-width: 100%;
   height: auto;
-  object-fit: cover; /* Vycentrujte obrázok s okrajom odsadením polovice výrezu od stredového toku kontajnera.  */
-  margin-left: calc(50% - 50vw); /* od kraja po kraj -„full-bleed“ efekt, ak máš stránku s obsahom, ktorý je zarovnaný na stred */
-  margin-right: calc(50% - 50vw); /* t.j posunie obrázok doprava a doľava o polovicu rozdielu medzi stredom stránky a šírkou viewportu. */
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+/* 🔄 ale keď sa stránka zúži (napr. tablet, mobil) */
+@media (max-width: 1100px) {
+  .photo-centric {
+    width: 100vw;
+    max-width: 100vw;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
+  }
+}
+/* ===== END Fotka v beznom okne na stred ===== */
 
 img.basen {
   transform: translateY(30%);
